v1
    - Initial release
    - Support for Xbox 360 Controllers connected via OTG
    - Support for Xbox One Controllers connected via OTG
    - Support for Xbox One S Controllers connected via OTG or Bluetooth