@@ -1,9 +1,9 @@
 id=consolekeylayouts
 name=Console Controller Keylayouts
-version=v1
-versionCode=1
+version=v1.1
+versionCode=2
 author=HylianGaming (Nbay64 on XDA)
 description=Adds keylayout files for console controllers for use on Android devices. Currently supports Xbox 360, Xbox One and Xbox One S controllers.
 support=http://forum.xda-developers.com/apps/magisk/magisk-console-controller-keylayouts-t3474174
 donate=https://www.paypal.me/BenjaminKatkin
-cacheModule=false
+template=4
