@@ -1,3 +1,5 @@
+v2
+	- Updated to Magisk Module Template v4
 v1
     - Initial release
     - Support for Xbox 360 Controllers connected via OTG
